--- a/1-homepage.html
+++ b/1-homepage.html
@@ -25,7 +25,12 @@
 	<!-- Bootstrap styling -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+	<!-- Style Sheet -->
 	<link rel="stylesheet" href="styles.css">
+
+	<!-- JavaScript Scripts -->
+	<script src="scripts.js"></script>
 </head>
 
 <body class="text-white">
@@ -120,55 +125,16 @@
 		<!-- Carousel of Testimonials-->
 		<section class="container-fluid purple-bg py-5">
 			<div class="container-lg quotes">
-				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-					<div class="carousel-inner">
-						<div class="carousel-item active px-5">
-							<div class="d-flex flex-column align-items-center flex-sm-row col-sm-10 carousel-helper mx-5">
-								<img class="rounded-circle carousel-avatar" src="images/profile_5.jpg" width="210px" />
-								<div class="px-sm-5">
-									<p class="px-2 mt-4 mt-md-0">&#171; Those tutorials are concise and go straight to
-										the point. I can't think of a better place to learn something. And it's so fun!
-									</p>
-									<p class="font-weight-bold pl-2 pt-2 mb-1 align-self-start">Person Name</p>
-									<cite class="pl-2 align-self-start">weather presenter</cite>
-								</div>
-							</div>
-						</div>
-
-						<div class="carousel-item px-5">
-							<div class="d-flex flex-column align-items-center flex-sm-row col-sm-10 carousel-helper mx-5">
-								<img class="rounded-circle carousel-avatar" src="images/profile_5.jpg" width="210px" />
-								<div class="px-sm-5">
-									<p class="px-2 mt-4 mt-md-0">&#171; Those tutorials are concise and go straight to
-										the point. I can't think of a better place to learn something. And it's so fun!
-									</p>
-									<p class="font-weight-bold pl-2 pt-2 mb-1 align-self-start">Person Name</p>
-									<cite class="pl-2 align-self-start">weather presenter</cite>
-								</div>
-							</div>
-						</div>
-
-						<div class="carousel-item px-5">
-							<div class="d-flex flex-column align-items-center flex-sm-row col-sm-10 carousel-helper mx-5">
-								<img class="rounded-circle carousel-avatar" src="images/profile_5.jpg" width="210px" />
-								<div class="px-sm-5">
-									<p class="px-2 mt-4 mt-md-0">&#171; Those tutorials are concise and go straight to
-										the point. I can't think of a better place to learn something. And it's so fun!
-									</p>
-									<p class="font-weight-bold pl-2 pt-2 mb-1 align-self-start">Person Name</p>
-									<cite class="pl-2 align-self-start">weather presenter</cite>
-								</div>
-							</div>
-						</div>
+				<div class="loader text-center" id="testimonialLoader">Loading...</div>
+				<div id="carouselExampleIndicators" class="testimonialCarousel carousel slide d-none" data-ride="carousel">
+					<div class="carousel-inner" id="testimonial">
 					</div>
 
-					<a class="carousel-control-prev mb-5 mb-sm-0" href="#carouselExampleIndicators" role="button"
-						data-slide="prev">
+					<a class="carousel-control-prev mb-5 mb-sm-0" href="#carouselExampleIndicators" role="button" data-slide="prev">
 						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 						<span class="sr-only">Previous</span>
 					</a>
-					<a class="carousel-control-next mb-5 mb-sm-0" href="#carouselExampleIndicators" role="button"
-						data-slide="next">
+					<a class="carousel-control-next mb-5 mb-sm-0" href="#carouselExampleIndicators" role="button" data-slide="next">
 						<span class="carousel-control-next-icon" aria-hidden="true"></span>
 						<span class="sr-only">Next</span>
 					</a>
@@ -269,7 +235,7 @@
 					</div>
 					<a class="carousel-control-prev videoLeft " href="#videoCarousel " role="button "
 						data-slide="prev ">
-						<span class="icon leftArrowVideo mb-5 mb-sm-0 " aria-hidden="true "></span>
+						<span class="carousel-control-prev-icon" aria-hidden="true "></span>
 						<span class="sr-only ">Previous</span>
 					</a>
 					<a class="carousel-control-next videoRight " href="#videoCarousel " role="button "
@@ -528,111 +494,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- Phone Carousel -->
-		<section class="container-fluid text-dark white-bg py-5 mb-5 d-sm-none">
-			<div class="container-lg quotes">
-				<div id="videoCarousel2" class="carousel slide" data-ride="carousel">
-					<div class="carousel-inner">
-						<h2 class="font-weight-light px-1 text-center pt-5 pb-5">Most <span
-								class="font-weight-bold purple">popular</span> tutorials
-						</h2>
-						<div class="carousel-item active">
-							<div class="d-flex flex-column align-items-center flex-sm-row col-sm-10 carousel-helper">
-								<img src="images/thumbnail_1.jpg" width="255" height="154">
-								<h5 class="align-self-start font-weight-bolder pt-3 pl-6">Diagonal Smile</h5>
-								<p class="text-gray align-self-start pt-1 pl-6">The ladies love my crooked, smirky
-									smile!</p>
-								<div class="align-self-start pt-1 pl-6">
-									<img class="rounded-circle float-left" src="images/profile_1.jpg" width="30"
-										height="30">
-									<p class="purple float-right pl-3 mb-0 mt-1 ">Phillip Massey</p>
-								</div>
-								<div class="row mx-0">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_off.png" height="15px" width="15px">
-									<h6 class="purple-text ml-auto">8min</h6>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item ">
-							<div class="d-flex flex-column align-items-center flex-sm-row col-sm-10 carousel-helper">
-								<img src="images/thumbnail_2.jpg" width="255" height="154">
-								<h5 class="align-self-start font-weight-bolder pt-3 pl-6">Sad Smile</h5>
-								<p class="text-gray align-self-start pt-1 pl-6">I am a Sad Boi.</p>
-								<div class="align-self-start pt-1 pl-6">
-									<img class="rounded-circle float-left" src="images/profile_1.jpg" width="30"
-										height="30">
-									<p class="purple float-right pl-3 mb-0 mt-1 ">Phillip Massey</p>
-								</div>
-								<div class="row mx-0">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_off.png" height="15px" width="15px">
-									<h6 class="purple-text ml-auto">8min</h6>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item ">
-							<div class="d-flex flex-column align-items-center flex-sm-row col-sm-10 carousel-helper">
-								<img src="images/thumbnail_3.jpg" width="255" height="154">
-								<h5 class="align-self-start font-weight-bolder pt-3 pl-6">Natural Smile</h5>
-								<p class="text-gray align-self-start pt-1 pl-6">Enjoying my free-range, organic smile!
-								</p>
-								<div class="align-self-start pt-1 pl-6">
-									<img class="rounded-circle float-left" src="images/profile_1.jpg" width="30"
-										height="30">
-									<p class="purple float-right pl-3 mb-0 mt-1 ">Phillip Massey</p>
-								</div>
-								<div class="row mx-0">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_off.png" height="15px" width="15px">
-									<h6 class="purple-text ml-auto">8min</h6>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item ">
-							<div class="d-flex flex-column align-items-center flex-sm-row col-sm-10 carousel-helper">
-								<img src="images/thumbnail_4.jpg" width="255" height="154">
-								<h5 class="align-self-start font-weight-bolder pt-3 pl-6">Happy Smile</h5>
-								<p class="text-gray align-self-start pt-1 pl-6">I am dying inside, but you wouldn't know
-									it!!!</p>
-								<div class="align-self-start pt-1 pl-6">
-									<img class="rounded-circle float-left" src="images/profile_1.jpg" width="30"
-										height="30">
-									<p class="purple float-right pl-3 mb-0 mt-1 ">Phillip Massey</p>
-								</div>
-								<div class="row mx-0">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_on.png" height="15px" width="15px">
-									<img src="images/star_off.png" height="15px" width="15px">
-									<h6 class="purple-text ml-auto">8min</h6>
-								</div>
-							</div>
-						</div>
-						<a class="carousel-control-prev videoLeft" href="#videoCarousel2" role="button"
-							data-slide="prev">
-							<span class="icon leftArrowVideo mb-5 mb-sm-0" aria-hidden="true"></span>
-							<span class="sr-only">Previous</span>
-						</a>
-						<a class="carousel-control-next videoRight" href="#videoCarousel2" role="button"
-							data-slide="next">
-							<span class="icon rightArrowVideo mb-5 mb-sm-0" aria-hidden="true"></span>
-							<span class="sr-only">Next</span>
-						</a>
-					</div>
-				</div>
-			</div>
-		</section>
+
 	</main>
 
 	<!-- Footer -->
