Fixed some video data on courses

--- a/courses.html
+++ b/courses.html
@@ -146,10 +146,10 @@
 								<img src="images/star_on.png" class="" alt="">
 								<img src="images/star_on.png" class="" alt="">
 								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
 								<img src="images/star_off.png" class="" alt="">
 							</div>
-							<p class="purple ml-3 pt-3">8 min"</p>
+							<p class="purple ml-3 pt-3">8 min</p>
 						</div>
 					</div>
 				</div>
@@ -159,13 +159,13 @@
 						<img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
 					</div>
 					<div class="card-body">
-						<h1 class="card-title lead font-weight-bold text-dark">Diagonal Smile</h1>
+						<h1 class="card-title lead font-weight-bold text-dark">Sad Smile</h1>
 						<p class="card-text text-secondary">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do
 							eiusmod.</p>
 						<div class="row">
 							<img class="rounded-circle ml-3" src="images/profile_1.jpg" height="25px" width="25px"
 								alt="">
-							<p class="ml-3 purple">Phillip Massey</p>
+							<p class="ml-3 purple">Nannie Lawrence</p>
 						</div>
 						<div class="row align-items-center justify-content-between px-4">
 							<div class="row">
@@ -175,7 +175,7 @@
 								<img src="images/star_on.png" class="" alt="">
 								<img src="images/star_off.png" class="" alt="">
 							</div>
-							<p class="purple ml-3 pt-3">8 min"</p>
+							<p class="purple ml-3 pt-3">14 min</p>
 						</div>
 					</div>
 				</div>
@@ -185,23 +185,23 @@
 						<img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
 					</div>
 					<div class="card-body">
-						<h1 class="card-title lead font-weight-bold text-dark">Diagonal Smile</h1>
+						<h1 class="card-title lead font-weight-bold text-dark">Natural Smile</h1>
 						<p class="card-text text-secondary">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do
 							eiusmod.</p>
 						<div class="row">
 							<img class="rounded-circle ml-3" src="images/profile_1.jpg" height="25px" width="25px"
 								alt="">
-							<p class="ml-3 purple">Phillip Massey</p>
+							<p class="ml-3 purple">Bruce Walters</p>
 						</div>
 						<div class="row align-items-center justify-content-between px-4">
 							<div class="row">
 								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
 								<img src="images/star_off.png" class="" alt="">
 							</div>
-							<p class="purple ml-3 pt-3">8 min"</p>
+							<p class="purple ml-3 pt-3">21 min</p>
 						</div>
 					</div>
 				</div>
@@ -211,7 +211,7 @@
 						<img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
 					</div>
 					<div class="card-body">
-						<h1 class="card-title lead font-weight-bold text-dark">Diagonal Smile</h1>
+						<h1 class="card-title lead font-weight-bold text-dark">Happy Smile</h1>
 						<p class="card-text text-secondary">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do
 							eiusmod.</p>
 						<div class="row">
@@ -224,10 +224,10 @@
 								<img src="images/star_on.png" class="" alt="">
 								<img src="images/star_on.png" class="" alt="">
 								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
 								<img src="images/star_off.png" class="" alt="">
 							</div>
-							<p class="purple ml-3 pt-3">8 min"</p>
+							<p class="purple ml-3 pt-3">24 min</p>
 						</div>
 					</div>
 				</div>
@@ -250,10 +250,10 @@
 								<img src="images/star_on.png" class="" alt="">
 								<img src="images/star_on.png" class="" alt="">
 								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
 								<img src="images/star_off.png" class="" alt="">
 							</div>
-							<p class="purple ml-3 pt-3">8 min"</p>
+							<p class="purple ml-3 pt-3">8 min</p>
 						</div>
 					</div>
 				</div>
@@ -263,13 +263,13 @@
 						<img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
 					</div>
 					<div class="card-body">
-						<h1 class="card-title lead font-weight-bold text-dark">Diagonal Smile</h1>
+						<h1 class="card-title lead font-weight-bold text-dark">Sad Smile</h1>
 						<p class="card-text text-secondary">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do
 							eiusmod.</p>
 						<div class="row">
 							<img class="rounded-circle ml-3" src="images/profile_1.jpg" height="25px" width="25px"
 								alt="">
-							<p class="ml-3 purple">Phillip Massey</p>
+							<p class="ml-3 purple">Nannie Lawrence</p>
 						</div>
 						<div class="row align-items-center justify-content-between px-4">
 							<div class="row">
@@ -279,7 +279,7 @@
 								<img src="images/star_on.png" class="" alt="">
 								<img src="images/star_off.png" class="" alt="">
 							</div>
-							<p class="purple ml-3 pt-3">8 min"</p>
+							<p class="purple ml-3 pt-3">14 min</p>
 						</div>
 					</div>
 				</div>
@@ -289,23 +289,23 @@
 						<img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
 					</div>
 					<div class="card-body">
-						<h1 class="card-title lead font-weight-bold text-dark">Diagonal Smile</h1>
+						<h1 class="card-title lead font-weight-bold text-dark">Natural Smile</h1>
 						<p class="card-text text-secondary">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do
 							eiusmod.</p>
 						<div class="row">
 							<img class="rounded-circle ml-3" src="images/profile_1.jpg" height="25px" width="25px"
 								alt="">
-							<p class="ml-3 purple">Phillip Massey</p>
+							<p class="ml-3 purple">Bruce Walters</p>
 						</div>
 						<div class="row align-items-center justify-content-between px-4">
 							<div class="row">
 								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
 								<img src="images/star_off.png" class="" alt="">
 							</div>
-							<p class="purple ml-3 pt-3">8 min"</p>
+							<p class="purple ml-3 pt-3">21 min</p>
 						</div>
 					</div>
 				</div>
@@ -315,7 +315,7 @@
 						<img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
 					</div>
 					<div class="card-body">
-						<h1 class="card-title lead font-weight-bold text-dark">Diagonal Smile</h1>
+						<h1 class="card-title lead font-weight-bold text-dark">Happy Smile</h1>
 						<p class="card-text text-secondary">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do
 							eiusmod.</p>
 						<div class="row">
@@ -328,10 +328,10 @@
 								<img src="images/star_on.png" class="" alt="">
 								<img src="images/star_on.png" class="" alt="">
 								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
 								<img src="images/star_off.png" class="" alt="">
 							</div>
-							<p class="purple ml-3 pt-3">8 min"</p>
+							<p class="purple ml-3 pt-3">24 min</p>
 						</div>
 					</div>
 				</div>
@@ -354,10 +354,10 @@
 								<img src="images/star_on.png" class="" alt="">
 								<img src="images/star_on.png" class="" alt="">
 								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
 								<img src="images/star_off.png" class="" alt="">
 							</div>
-							<p class="purple ml-3 pt-3">8 min"</p>
+							<p class="purple ml-3 pt-3">8 min</p>
 						</div>
 					</div>
 				</div>
@@ -367,13 +367,13 @@
 						<img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
 					</div>
 					<div class="card-body">
-						<h1 class="card-title lead font-weight-bold text-dark">Diagonal Smile</h1>
+						<h1 class="card-title lead font-weight-bold text-dark">Sad Smile</h1>
 						<p class="card-text text-secondary">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do
 							eiusmod.</p>
 						<div class="row">
 							<img class="rounded-circle ml-3" src="images/profile_1.jpg" height="25px" width="25px"
 								alt="">
-							<p class="ml-3 purple">Phillip Massey</p>
+							<p class="ml-3 purple">Nannie Lawrence</p>
 						</div>
 						<div class="row align-items-center justify-content-between px-4">
 							<div class="row">
@@ -383,7 +383,7 @@
 								<img src="images/star_on.png" class="" alt="">
 								<img src="images/star_off.png" class="" alt="">
 							</div>
-							<p class="purple ml-3 pt-3">8 min"</p>
+							<p class="purple ml-3 pt-3">14 min</p>
 						</div>
 					</div>
 				</div>
@@ -393,23 +393,23 @@
 						<img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
 					</div>
 					<div class="card-body">
-						<h1 class="card-title lead font-weight-bold text-dark">Diagonal Smile</h1>
+						<h1 class="card-title lead font-weight-bold text-dark">Natural Smile</h1>
 						<p class="card-text text-secondary">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do
 							eiusmod.</p>
 						<div class="row">
 							<img class="rounded-circle ml-3" src="images/profile_1.jpg" height="25px" width="25px"
 								alt="">
-							<p class="ml-3 purple">Phillip Massey</p>
+							<p class="ml-3 purple">Bruce Walters</p>
 						</div>
 						<div class="row align-items-center justify-content-between px-4">
 							<div class="row">
 								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
-								<img src="images/star_on.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
+								<img src="images/star_off.png" class="" alt="">
 								<img src="images/star_off.png" class="" alt="">
 							</div>
-							<p class="purple ml-3 pt-3">8 min"</p>
+							<p class="purple ml-3 pt-3">21 min</p>
 						</div>
 					</div>
 				</div>
