--- a/homepage.html
+++ b/homepage.html
@@ -56,7 +56,7 @@
 					<img class="m-2" src="images/smile_off.png" height="30px" width="40px">
 					<img class="m-2" src="images/logo.png" height="30px" width="111px">
 				</a>
-				<!-- Hamburger -->
+				<!-- Borger -->
 				<button class="navbar-toggler float-left position-absolute d-sm-none" type="button"
 					data-toggle="collapse" data-target="#navbarLinks">
 					<span class="holberton_school-icon-menu text-white"></span>
@@ -76,7 +76,7 @@
 					</ul>
 				</div>
 			</nav>
-			<!-- Hero Section -->
+			<!-- Hero -->
 			<div class="position-relative pt-5 mt-5">
 				<div class="row">
 					<div class="col text-center pt-5 mt-5">
@@ -93,7 +93,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- Awards Section-->
+			<!-- Awards -->
 			<div class="row mt-5 py-5">
 				<div class="col-xl-3 col-6 col-sm-3">
 					<img class="card-img-top img-fluid rounded-circle px-3" src="images/profile_1.jpg">
@@ -129,12 +129,14 @@
 
 	<!-- Main -->
 	<main>
-	<!-- Carousel of Testimonials/Quotes-->
+
+		<!-- Carousel -->
 		<section class="container-fluid purple-bg py-5">
 			<div class="container-lg quotes">
-				<div class="loader text-center" id="testimonialLoader">Loading...</div>
-				<div id="quotes-card" class="testimonialCarousel carousel slide d-none" data-ride="carousel">
+				<div class="loader text-center" id="testimonialLoader"></div>
+				<div id="quotes-card" class="testimonialCarousel carousel slide d-none">
 					<div class="carousel-inner" id="testimonial">
+						<!-- Cards -->
 					</div>
 
 					<a class="carousel-control-prev mb-5 mb-sm-0" href="#quotes-card" role="button" data-slide="prev">
@@ -148,19 +150,20 @@
 				</div>
 			</div>
 		</section>
-		<!-- Popular videos section -->
+
+  		<!-- Popular videos -->
 		<section class="container-fluid text-dark white-bg py-5 mb-5 d-sm-block">
 			<div class="container-lg">
 				<div class="carousel-container mx-5">
 					<div class="carousel px-5" id="popular-card">
-						<!-- Cards will be appended here -->
+						<!-- Cards -->
 					</div>
 					<div class="loader" id="popular-loader"></div>
 				</div>
 			</div>
 		</section>
 
-		<!-- Membership Section -->
+  		<!-- Membership -->
 		<section class="bg-dark container-fluid">
 			<h1 class="text-center text-white font-weight-light py-5"><span class="font-weight-bold purple">Free </span>
 				membership</h1>
@@ -198,8 +201,17 @@
 					for free</button>
 			</div>
 		</section>
-		<!-- Latest Videos -->
-		<section class="container-fluid text-dark white-bg py-5 mb-5 d-none d-sm-block">
+
+  		<!-- Latest Videos -->
+		<section class="container-fluid text-dark white-bg py-5 mb-5 d-sm-block">
+			<div class="container-lg">
+				<div class="carousel-container mx-5">
+					<div class="carousel px-5" id="latest-card">
+						<!-- Cards -->
+					</div>
+					<div class="loader" id="latest-loader"></div>
+				</div>
+			</div>
 		</section>
 
 	</main>
