Pre-pre-LD changes

--- a/pricing.html
+++ b/pricing.html
@@ -239,11 +239,11 @@
 	<!-- Footer -->
 	<footer class="container-fluid bg-dark m-0 py-5">
 		<div class="row align-items-center justify-content-center">
-			<div class="d-flex col-lg-6 justify-content-center">
+			<div class="d-flex col-lg-6 justify-content-lg-start justify-content-center">
 				<img class="m-2" src="images/smile_off.png" height="30px" width="40px">
 				<img class="m-2" src="images/logo.png" height="30px" width="111px">
 			</div>
-			<ul class="list-group list-group-horizontal list-unstyled">
+			<ul class="list-group list-group-horizontal list-unstyled mt-4">
 				<li class="ml-3">
 					<a class="text-decoration-none" href="https://www.facebook.com/HolbertonSchool/">
 						<span class="fb-icon display-4"></span>
