Adding changes from Pre-LD

--- a/courses.html
+++ b/courses.html
@@ -104,6 +104,7 @@
 								class="caret"></span>
 						</button>
 						<ul id="topicDropDown" class="dropdown-menu w-100" role="menu" aria-labelledby="topic">
+                            <!-- drop items -->
 						</ul>
 					</div>
 				</div>
