--- a/courses.html
+++ b/courses.html
@@ -88,7 +88,7 @@
 					<p class="mb-2">KEYWORDS</p>
 					<div
 						class="search btn d-flex flex-row border-bottom border-top-0 border-left-0 border-right-0 rounded-top">
-						<img src="./images/icon_search.png" alt="search-icon" class="my-2 py-1">
+						<span class="bi bi-search" style="font-size: 2em; color: red;"></span>
 						<input class="form-control-lg border-0 w-100" placeholder="Search by keywords" type="search" id="search">
 					</div>
 				</div>
